--- a/css/files.css
+++ b/css/files.css
@@ -35,3 +35,29 @@ table {
 h2 {
     color:#00be10;
 }
+{
+    text-decoration:none;
+}
+.navbar {
+    background:aqua;font-family:Arial, Helvetica, sans-serif;
+    padding-right: 15px;padding-left: 15px;
+}
+.navdiv {
+    display:flex;align-items:center;justify-content:space-between;
+}
+.logo a{
+    font-size:40px;font-weight:500;color:crimson;
+}
+li {
+    list-style:none;display:inline-block
+}
+li a{
+    color:black;font-size:15px;font-weight:bold;margin-right: 25px;
+}
+button {
+    background-color:white;margin-left: 10px;border-radius:10px;padding:10px;
+    width:90px;
+}
+button a{
+    color:black;font-weight:bold;font-size:15px;
+}
