--- a/css/files.css
+++ b/css/files.css
@@ -15,7 +15,7 @@ h1 {
 table, th, td {
     border: 1px solid black;
     align-self:center;
-    color:rgb(221, 18, 59);
+    color:black;
     
     
 }
@@ -60,4 +60,7 @@ button {
 }
 button a{
     color:black;font-weight:bold;font-size:15px;
+}
+nav a {
+    color:blue;
 }
