--- a/css/files.css
+++ b/css/files.css
@@ -39,7 +39,7 @@ h2 {
     text-decoration:none;
 }
 .navbar {
-    background-color: aqua;font-family:Arial, Helvetica, sans-serif;
+    background-color:aliceblue;font-family:Arial, Helvetica, sans-serif;
     padding-right: 15px;padding-left: 15px;
 }
 .navdiv {
