--- a/css/files.css
+++ b/css/files.css
@@ -39,7 +39,7 @@ h2 {
     text-decoration:none;
 }
 .navbar {
-    background-color:aqua;font-family:Arial, Helvetica, sans-serif;
+    background-color:azure;font-family:Arial, Helvetica, sans-serif;
     padding-right: 15px;padding-left: 15px;
 }
 .navdiv {
@@ -126,8 +126,4 @@ nav a {
 
 .dropdown:hover .dropbtn {
     background-color:black;
-}
-
-.form {
-    text-align: center;
 }
