--- a/css/files.css
+++ b/css/files.css
@@ -127,3 +127,26 @@ nav a {
 .dropdown:hover .dropbtn {
     background-color:black;
 }
+
+.container {
+    width:420px;
+    background:transparent;
+    border:2px solid rgba(255,255,255,0.1);
+    backdrop-filter:blur(18px);
+    box-shadow:0px 0px 0px rgba(0,0,0,0.1);
+    color:#f1f1f1;
+    border-radius:10px;
+    padding:30px 40px;
+}
+
+.container h1 {
+    font-size:36px;
+    text-align:center;
+}
+
+.container .input-box {
+    position:relative;
+    width:100%;
+    height:50px;
+    margin:30px 0px;
+}
