--- a/css/files.css
+++ b/css/files.css
@@ -38,7 +38,7 @@ h2 {
 
 .navbar {
     background-color:azure;font-family:Arial, Helvetica, sans-serif;
-    padding:0;padding:0;
+    padding:0px;margin:0px
 }
 .navdiv {
     display:flex;align-items:center;justify-content:space-between;
