--- a/css/files.css
+++ b/css/files.css
@@ -144,9 +144,7 @@ nav a {
     width:100%;
     height:50px;
     margin:30px 0px;
+    align-self: center;
 }
 
-.container {
-    Float:center;
-}
 
