--- a/css/files.css
+++ b/css/files.css
@@ -41,7 +41,7 @@ h2 {
     display:flex;align-items:center;justify-content:space-between;
 }
 .logo a{
-    font-size:40px;font-weight:500;color:crimson;
+    font-size:40px;font-weight:500;color:black;
 }
 li {
     list-style:none;display:inline-block
