--- a/css/files.css
+++ b/css/files.css
@@ -37,8 +37,8 @@ h2 {
 }
 
 .navbar {
-    background-color:greenyellow;
-    border-color: greenyellow;
+    background-color:transparent;
+    border-color:transparent;
     margin:50%;
     padding:50%;
 }
