--- a/css/files.css
+++ b/css/files.css
@@ -38,9 +38,8 @@ h2 {
 
 .navbar {
     background-color:transparent;
-    border-color:transparent;
-    margin:50%;
-    padding:50%;
+    margin:0px;
+    padding:0px;
 }
 
 .navdiv {
