--- a/css/files.css
+++ b/css/files.css
@@ -40,14 +40,28 @@ h2 {
     background-color:transparent;
     margin:0px;
     padding:0px;
+    height:80px;
+    width:100px;
 }
 
 .navdiv {
-    display:flex;align-items:center;justify-content:space-between;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
 }
 .logo a{
-    font-size:40px;font-weight:500;color:black;
+    font-size:35px;
+    font-weight:500;color:black;
+    line-height:80px;
+    padding:0 100px;
+    font-weight:bold;
 }
+
+ul {
+    float:right;
+    margin-right:20px;
+}
+
 li {
     list-style:none;display:inline-block
 }
