--- a/css/files.css
+++ b/css/files.css
@@ -60,13 +60,19 @@ h2 {
 ul {
     float:right;
     margin-right:20px;
+    
 }
 
 li {
-    list-style:none;display:inline-block
+    list-style:none;
+    display:inline-block
 }
 li a{
-    color:black;font-size:15px;font-weight:bold;margin-right: 25px;
+    color:black;
+    font-size:15px;
+    font-weight:bold;
+    margin-right: 25px;
+    text-transform: uppercase;
 }
 button {
     background-color:white;margin-left: 10px;border-radius:10px;padding:10px;
