--- a/css/files.css
+++ b/css/files.css
@@ -183,4 +183,10 @@ nav a {
     float:right;
     line-height:80px;
     margin-right:40px;
+    cursor:pointer;
+    display:none;
+}
+
+#check {
+    display:none;
 }
