--- a/css/files.css
+++ b/css/files.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 .navbar {
-    background-color:transparent;
+    background:rgb(0,100,0)
     margin:0px;
     padding:0px;
     height:80px;
