--- a/css/files.css
+++ b/css/files.css
@@ -36,8 +36,9 @@ h2 {
 }
 
 .navbar {
-    margin:0px;
-    padding:0px;
+    background:goldenrod;
+    margin:15px;
+    padding:15px;
     height:80px;
     width:100px;
 }
