--- a/css/files.css
+++ b/css/files.css
@@ -36,9 +36,9 @@ h2 {
 }
 
 .navbar {
-    background:goldenrod;
-    margin:0px;
-    padding:0px;
+    background-color:goldenrod;
+    margin: 15px;
+    padding:15px;
     height:80px;
     width:120px;
 }
