--- a/css/files.css
+++ b/css/files.css
@@ -37,10 +37,9 @@ h2 {
 
 .navbar {
     background-color:goldenrod;
-    margin: opx;
+    margin: 0px;
     padding:0px;
     height:80px;
-    width:120px;
 }
 
 .navdiv {
