--- a/css/files.css
+++ b/css/files.css
@@ -190,3 +190,14 @@ nav a {
 #check {
     display:none;
 }
+.footerContainer{
+    width:420px;
+    background:transparent;
+    border:2px solid rgba(255,255,255,0.1);
+    backdrop-filter:blur(18px);
+    box-shadow:0px 0px 0px rgba(0,0,0,0.1);
+    color:#f1f1f1;
+    border-radius:10px;
+    padding:30px 40px;
+    align-items: center;
+}
