--- a/files.css
+++ b/files.css
@@ -162,7 +162,7 @@ nav a {
     color:#f1f1f1;
     border-radius:10px;
     padding:30px 40px;
-    align-items: center;
+    align-self: center;
 }
 
 .container h1 {
